# agent-runtime-framework

./: .api_demo_config.json  .arf_config.json  .gitignore  MEMORY.md  README.md  pyproject.toml  testes.txt
.arf/: memory.md  memory.state.json  workflow-runs.json
agent_runtime_framework/: __init__.py
docs/: 2026-03-18-chat-ui-streaming-design.md  2026-03-26-Agent升级校验与演进建议.md  2026-03-30-Agent整体重构设计方案-已完成.md  2026-03-30-Agent整体重构设计方案.md  2026-03-31-TaskGraph工作流引擎重构设计方案.md  Agent与OpenClaw能力对照表.md  Agent与OpenCode能力对照表.md  desktop-content-architecture.md  全局设计文档.md  分层设计.md  当前Agent设计框架.md  当前进展与改进建议.md  通用Agent.md
frontend-shell/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
tests/: test_agent_display.py  test_agent_extension_interfaces.py  test_agent_loader.py  test_agent_registry.py  test_agent_tools.py  test_api_structure.py  test_application_stage_parser.py  test_artifacts.py  test_assistant_runtime.py  test_capability_diagnosis.py  test_capability_extension.py  test_capability_macros.py  test_capability_registry.py  test_codex_agent.py  test_core_models.py  test_demo_api.py  test_demo_app.py  test_demo_composition.py  test_demo_profiles.py  test_desktop_action_handlers.py  test_desktop_application.py  test_entrypoints.py  test_error_types.py  test_frontend_shell_scaffold.py  test_graph_core.py  test_graph_first_context_surface.py  test_harness_gates.py  test_llm_structured_parser.py  test_mcp_adapter.py  test_memory_and_policy.py  test_model_center.py  test_models.py  test_public_surface.py  test_resources.py  (+20 more)
(+427 files in other folders)
