[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime-framework"
version = "0.1.0"
description = "Reusable workflow-first agent runtime framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai",
  "pydantic",
  "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
arf-desktop-demo = "agent_runtime_framework.demo.server:main"

[tool.setuptools.packages.find]
include = ["agent_runtime_framework*"]
